--- a/assets/scss/components/_cotacoes.scss
+++ b/assets/scss/components/_cotacoes.scss
@@ -1,3 +1,8 @@
+body {
+  background-color: transparent !important;
+  background: transparent !important;
+}
+
 .swiper-cotacoes {
   * {
     font-family: "Montserrat", sans-serif;
