--- a/assets/scss/components/_cotacoes.scss
+++ b/assets/scss/components/_cotacoes.scss
@@ -1,6 +1,11 @@
 body {
   background-color: transparent !important;
   background: transparent !important;
+  height: fit-content !important;
+}
+
+html {
+  height: fit-content !important;
 }
 
 .swiper-cotacoes {
