--- a/assets/scss/components/_cotacoes.scss
+++ b/assets/scss/components/_cotacoes.scss
@@ -9,6 +9,12 @@ html {
 }
 
 .swiper-cotacoes {
+  cursor: not-allowed;
+
+  @media (max-width: 767px) {
+    cursor: pointer;
+  }
+
   * {
     font-family: "Montserrat", sans-serif;
   }
@@ -50,7 +56,7 @@ html {
   }
 
   .swiper-slide {
-    width: 400px !important;
+    width: 300px !important;
 
     @media (max-width: 767px) {
       width: 100% !important;
